--- a/style.css
+++ b/style.css
@@ -7,11 +7,16 @@ body {
   margin: 100px auto 0 auto;
   width: 80%;
   text-align: center;
-  font-family: cursive; font-size: 18px; font-style: italic; font-variant: normal;
+  font-family: cursive;
+  font-size: 18px;
+  font-style: italic;
+  font-variant: normal;
 }
 
 canvas {
-  margin: 100px auto 0 auto;
-  display: block;
-  border: 5px solid black;
+  margin: auto;
+  top: 0;
+  left: 0;
+  position: absolute;
+  z-index: -1;
 }
