--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 html {
+  overflow: hidden;
   margin: 0;
   padding: 0;
 }
@@ -9,7 +10,7 @@ body {
   text-align: left;
   font-family: cursive;
   font-size: 25px;
-  /* font-style: italic; */
+  font-style: italic;
   font-variant: normal;
 }
 
