--- a/style.css
+++ b/style.css
@@ -1,23 +1,17 @@
 html {
-  overflow: hidden;
   margin: 0;
   padding: 0;
 }
 
 body {
   margin: 100px auto 0 auto;
-  width: 100%;
-  text-align: left;
-  font-family: cursive;
-  font-size: 25px;
-  font-style: italic;
-  font-variant: normal;
+  width: 80%;
+  text-align: center;
+  font-family: cursive; font-size: 18px; font-style: italic; font-variant: normal;
 }
 
 canvas {
-  margin: auto;
-  top: 0;
-  left: 0;
-  position: absolute;
-  z-index: -1;
+  margin: 100px auto 0 auto;
+  display: block;
+  border: 5px solid black;
 }
