--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body {
 }
 
 h1 {
-  text-shadow: 2px 1px white;
+font-family: 'Open Sans', sans-serif; font-size: 60px;
+
 }
 h3 {
   text-shadow: 1px 1px pink;
